--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 .menu{
     background: #D5B0AC;
     color: #402E2A;
@@ -11,7 +12,43 @@ span {
     line-height: 30px;    
     text-align: center;
 }
-.span hover{
-    background-color: #FFFFFF;
+span:hover{
+    background: #9CD08F;
+    cursor: pointer;
 
 }
+
+.menu_vertical{
+    display: inline-block;
+    background: #D5B0AC;
+    color: #402E2A;
+    font-weight: bold;
+    text-align: center;
+}  
+.menu_vertical span{
+    display: block;
+    border-bottom: 1px solid #ffffff;
+    width: 100px;
+    line-height: 30px;    
+    text-align: center;
+  }
+  @media (min-width: 768px) {
+    .sidebar-nav .navbar .navbar-collapse {
+      padding: 0;
+      max-height: none;
+    }
+    .sidebar-nav .navbar  {
+      float: none;
+      display: block;
+    }
+    .sidebar-nav .navbar  {
+      float: none;
+      display: block;
+    }
+    .sidebar-nav .navbar {
+      padding-top: 12px;
+      padding-bottom: 12px;
+    }
+  }
+
+  
